Update: Redesign personal website with modern UI and professional content

--- a/index.html
+++ b/index.html
@@ -200,14 +200,14 @@
     <header>
         <img src="https://via.placeholder.com/200" alt="Jie Cai" class="profile-img">
         <h1>Jie Cai</h1>
-        <p class="subtitle">Senior Staff Research Scientist | AI & Computer Vision Expert</p>
+        <p class="subtitle">Senior Staff Research Scientist | AI & Multi-Modal Expert</p>
     </header>
 
     <section id="about">
         <div class="container">
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
-                <p>I am a Senior Staff Research Scientist at OPPO US Research Center, specializing in AI, Computer Vision, and Deep Learning. With a Ph.D. in Computer Science from the University of South Carolina, I focus on developing cutting-edge AI solutions for image and video enhancement, including reflection removal, super-resolution, and facial expression analysis.</p>
+                <p>I am a Senior Staff Research Scientist at OPPO US AI Center, specializing in AI, Computer Vision, and Deep Learning. With a Ph.D. in Computer Science from the University of South Carolina, I focus on developing cutting-edge AI solutions for image and video enhancement, including reflection removal, super-resolution, and facial expression analysis.</p>
             </div>
         </div>
     </section>
@@ -225,13 +225,11 @@
                 <h3>M.S. in Electrical and Computer Engineering</h3>
                 <p>University of Illinois at Chicago</p>
                 <p>Aug. 2013 - May 2015 | Chicago, IL, US</p>
-                <p>GPA: 4.0/4.0</p>
             </div>
             <div class="education-item">
                 <h3>B.S. in Mathematics and Statistics</h3>
                 <p>Northeastern University</p>
                 <p>Sept. 2010 - June 2014 | China</p>
-                <p>Major GPA: 92/100, Rank: top 3</p>
             </div>
         </div>
     </section>
@@ -240,14 +238,12 @@
         <div class="container">
             <h2 class="section-title">Work Experience</h2>
             <div class="experience-item">
-                <h3>OPPO US Research Center</h3>
+                <h3>OPPO US AI Center</h3>
                 <p class="position">Senior Staff Research Scientist</p>
                 <p class="date">Sept. 2019 - Present</p>
                 <ul>
                     <li>Led the development of AI Reflection Remover for Photo Album on OPPO Find X8</li>
-                    <li>Developed AI Clarity Enhancer using advanced models like NAFNet, LaMa, YOLO, and YOSO</li>
-                    <li>Spearheaded VSR models implementation for OPPO Find X2-X8 flagship smartphones</li>
-                    <li>Collaborated with engineering teams for pipeline implementation and model deployment</li>
+                    <li>Led the development and deployment of VSR models on OPPO Find X2-X8 flagship smartphones.</li>
                 </ul>
             </div>
             <div class="experience-item">
@@ -264,7 +260,7 @@
                 <p class="position">Research Assistant</p>
                 <p class="date">Aug. 2015 - Aug. 2019</p>
                 <ul>
-                    <li>Developed facial expression analysis techniques using CNN, LSTM & GAN</li>
+                    <li>Developed facial expression analysis techniques using CNN, GAN & LSTM</li>
                     <li>Proposed novel loss functions (Probabilistic Attribute Tree-CNN, Island Loss) for FER</li>
                 </ul>
             </div>
@@ -278,7 +274,7 @@
                 <div class="skill-card">
                     <i class="fas fa-brain fa-3x"></i>
                     <h3>AI Models</h3>
-                    <p>Diffusion Model, RealESRGAN, NAFNet, LaMa, YOLO, YOSO, Mask R-CNN</p>
+                    <p>Diffusion Model, RealESRGAN, NAFNet, LaMa, YOLO, YOSO</p>
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-camera fa-3x"></i>
@@ -288,7 +284,7 @@
                 <div class="skill-card">
                     <i class="fas fa-code fa-3x"></i>
                     <h3>Development</h3>
-                    <p>Deep Learning Frameworks, Model Deployment, Pipeline Implementation</p>
+                    <p>Model Quantization, Model Deployment, Pipeline Implementation</p>
                 </div>
             </div>
         </div>
@@ -303,6 +299,7 @@
                     <a href="mailto:caijie0620@gmail.com"><i class="fas fa-envelope"></i></a>
                     <a href="https://www.linkedin.com/in/jie-cai" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://scholar.google.com" target="_blank"><i class="fas fa-graduation-cap"></i></a>
+                    <a href="https://github.com/jie-cai" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </div>
@@ -310,7 +307,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Jie Cai. All rights reserved.</p>
+            <p>&copy; 2025 Jie Cai. All rights reserved.</p>
         </div>
     </footer>
 </body>
