Update: Redesign personal website with modern UI

--- a/index.html
+++ b/index.html
@@ -242,8 +242,9 @@
                 <p class="position">Senior Staff Research Scientist</p>
                 <p class="date">Sept. 2019 - Present</p>
                 <ul>
-                    <li>Led the development of AI Reflection Remover for Photo Album on OPPO Find X8</li>
-                    <li>Led the development and deployment of VSR models on OPPO Find X2-X8 flagship smartphones.</li>
+                    <li>Led the development of AI Reflection Remover for Photo Album on OPPO Find X8.</li>
+                    <li>Participated in the development of AI Clarity Enhancer for Photo Album on OPPO Find X8.</li>
+                    <li>Led the development of VSR models on OPPO Find X2-X8 flagship smartphones.</li>
                 </ul>
             </div>
             <div class="experience-item">
@@ -274,7 +275,7 @@
                 <div class="skill-card">
                     <i class="fas fa-brain fa-3x"></i>
                     <h3>AI Models</h3>
-                    <p>Diffusion Model, RealESRGAN, NAFNet, LaMa, YOLO, YOSO</p>
+                    <p>Diffusion Model, CodeFormer, RealESRGAN, NAFNet, LaMa, PaddleOCR, YOLO, YOSO</p>
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-camera fa-3x"></i>
