Update: Redesign personal website with modern UI

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
                 <p>Feel free to reach out for research collaborations or professional inquiries!</p>
                 <div class="social-links">
                     <a href="mailto:caijie0620@gmail.com"><i class="fas fa-envelope"></i></a>
-                    <a href="https://www.linkedin.com/in/jie-cai" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://scholar.google.com" target="_blank"><i class="fas fa-graduation-cap"></i></a>
-                    <a href="https://github.com/jie-cai" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/jie-cai-88006994/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://scholar.google.com/citations?user=IUR0LIQAAAAJ&hl=en" target="_blank"><i class="fas fa-graduation-cap"></i></a>
+                    <a href="https://github.com/caijie0620" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </div>
