Update: Redesign personal website with modern UI

--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
             <div class="skills-grid">
                 <div class="skill-card">
                     <i class="fas fa-brain fa-3x"></i>
+                    <h3>Multi-Modal Models</h3>
+                    <p>Qwen2.5-VL</p>
+                </div>
+                <div class="skill-card">
+                    <i class="fas fa-brain fa-3x"></i>
                     <h3>AI Models</h3>
                     <p>Diffusion Model, CodeFormer, RealESRGAN, NAFNet, LaMa, PaddleOCR, YOLO, YOSO</p>
                 </div>
