Update: Redesign personal website with modern UI

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jie Cai - AI Research Scientist</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Add your styles here */
+    </style>
 </head>
 <body>
     <header>
@@ -113,10 +115,10 @@
             <div class="contact-info">
                 <p>Feel free to reach out for research collaborations or professional inquiries!</p>
                 <div class="social-links">
-                    <a href="mailto:caijie0620@gmail.com"><i class="fas fa-envelope"></i></a>
                     <a href="https://www.linkedin.com/in/jie-cai-88006994/" target="_blank"><i class="fab fa-linkedin"></i></a>
                     <a href="https://scholar.google.com/citations?user=IUR0LIQAAAAJ&hl=en" target="_blank"><i class="fas fa-graduation-cap"></i></a>
                     <a href="https://github.com/caijie0620" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="mailto:caijie0620@gmail.com"><i class="fas fa-envelope"></i></a>
                 </div>
             </div>
         </div>
