--- a/index.html
+++ b/index.html
@@ -6,7 +6,194 @@
     <title>Jie Cai - AI Research Scientist</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        /* Add your styles here */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        body {
+            line-height: 1.6;
+            color: #333;
+            background-color: #f8f9fa;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        header {
+            background: linear-gradient(135deg, #2193b0 0%, #6dd5ed 100%);
+            color: white;
+            padding: 100px 0;
+            text-align: center;
+        }
+
+        .profile-img {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            margin-bottom: 20px;
+            border: 5px solid white;
+            background-color: #fff;
+        }
+
+        h1 {
+            font-size: 3em;
+            margin-bottom: 10px;
+        }
+
+        .subtitle {
+            font-size: 1.4em;
+            margin-bottom: 20px;
+            opacity: 0.9;
+        }
+
+        section {
+            padding: 80px 0;
+            background: white;
+            margin: 20px 0;
+            border-radius: 10px;
+            box-shadow: 0 2px 15px rgba(0,0,0,0.1);
+        }
+
+        .section-title {
+            text-align: center;
+            margin-bottom: 40px;
+            font-size: 2em;
+            color: #2193b0;
+        }
+
+        .about-content {
+            max-width: 800px;
+            margin: 0 auto;
+            text-align: left;
+        }
+
+        .education-item {
+            margin-bottom: 30px;
+            padding: 20px;
+            border-left: 4px solid #2193b0;
+            background: #f8f9fa;
+        }
+
+        .education-item h3 {
+            color: #2193b0;
+            margin-bottom: 10px;
+        }
+
+        .skills-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            margin-top: 40px;
+        }
+
+        .skill-card {
+            background: white;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+        .projects-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 30px;
+        }
+
+        .project-card {
+            background: white;
+            border-radius: 10px;
+            overflow: hidden;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .project-card:hover {
+            transform: translateY(-5px);
+        }
+
+        .project-info {
+            padding: 20px;
+        }
+
+        .contact-info {
+            text-align: center;
+        }
+
+        .social-links {
+            margin-top: 20px;
+        }
+
+        .social-links a {
+            color: #2193b0;
+            font-size: 24px;
+            margin: 0 10px;
+            transition: color 0.3s;
+        }
+
+        .social-links a:hover {
+            color: #6dd5ed;
+        }
+
+        footer {
+            background: #2193b0;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+            margin-top: 20px;
+        }
+
+        .experience-item {
+            margin-bottom: 30px;
+            padding: 20px;
+            border-left: 4px solid #2193b0;
+            background: #f8f9fa;
+        }
+
+        .experience-item h3 {
+            color: #2193b0;
+            margin-bottom: 10px;
+        }
+
+        .experience-item .position {
+            font-weight: bold;
+            color: #555;
+        }
+
+        .experience-item .date {
+            color: #666;
+            font-style: italic;
+        }
+
+        .experience-item ul {
+            margin-top: 10px;
+            padding-left: 20px;
+        }
+
+        @media (max-width: 768px) {
+            header {
+                padding: 60px 0;
+            }
+
+            .profile-img {
+                width: 150px;
+                height: 150px;
+            }
+
+            h1 {
+                font-size: 2em;
+            }
+
+            section {
+                padding: 40px 0;
+            }
+        }
     </style>
 </head>
 <body>
@@ -87,11 +274,6 @@
             <div class="skills-grid">
                 <div class="skill-card">
                     <i class="fas fa-brain fa-3x"></i>
-                    <h3>Multi-Modal Models</h3>
-                    <p>Qwen2.5-VL</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fas fa-brain fa-3x"></i>
                     <h3>AI Models</h3>
                     <p>Diffusion Model, CodeFormer, RealESRGAN, NAFNet, LaMa, PaddleOCR, YOLO, YOSO</p>
                 </div>
@@ -115,10 +297,10 @@
             <div class="contact-info">
                 <p>Feel free to reach out for research collaborations or professional inquiries!</p>
                 <div class="social-links">
-                    <a href="https://www.linkedin.com/in/jie-cai-88006994/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://scholar.google.com/citations?user=IUR0LIQAAAAJ&hl=en" target="_blank"><i class="fas fa-graduation-cap"></i></a>
-                    <a href="https://github.com/caijie0620" target="_blank"><i class="fab fa-github"></i></a>
                     <a href="mailto:caijie0620@gmail.com"><i class="fas fa-envelope"></i></a>
+                    <a href="https://www.linkedin.com/in/jie-cai" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://scholar.google.com" target="_blank"><i class="fas fa-graduation-cap"></i></a>
+                    <a href="https://github.com/jie-cai" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </div>
