Update: Redesign personal website with modern UI

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="container">
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
-                <p>I am a Senior Staff Research Scientist at OPPO US AI Center, specializing in AI, Computer Vision, and Deep Learning. With a Ph.D. in Computer Science from the University of South Carolina, I focus on developing cutting-edge AI solutions for image and video enhancement, including reflection removal, super-resolution, and facial expression analysis.</p>
+                <p>I am a Senior Staff Research Scientist at OPPO US AI Center, specializing in AI, Computer Vision, and Vision-Language Models. My expertise spans across Image/Video Enhancement (including Super-Resolution, Reflection Removal, and Quality Enhancement) and Image/Video Understanding. I have a strong track record of building scalable and efficient AI models for real-world applications.</p>
             </div>
         </div>
     </section>
@@ -242,9 +242,9 @@
                 <p class="position">Senior Staff Research Scientist</p>
                 <p class="date">Sept. 2019 - Present</p>
                 <ul>
-                    <li>Led the development of AI Reflection Remover for Photo Album on OPPO Find X8.</li>
-                    <li>Participated in the development of AI Clarity Enhancer for Photo Album on OPPO Find X8.</li>
-                    <li>Led the development of VSR models on OPPO Find X2-X8 flagship smartphones.</li>
+                    <li>Led the development of AI Reflection Remover for Photo Album on OPPO Find X8</li>
+                    <li>Participated in the development of AI Clarity Enhancer for Photo Album on OPPO Find X8</li>
+                    <li>Led the development of VSR models on OPPO Find X2-X8 flagship smartphones</li>
                 </ul>
             </div>
             <div class="experience-item">
@@ -298,9 +298,9 @@
                 <p>Feel free to reach out for research collaborations or professional inquiries!</p>
                 <div class="social-links">
                     <a href="mailto:caijie0620@gmail.com"><i class="fas fa-envelope"></i></a>
-                    <a href="https://www.linkedin.com/in/jie-cai" target="_blank"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://scholar.google.com" target="_blank"><i class="fas fa-graduation-cap"></i></a>
-                    <a href="https://github.com/jie-cai" target="_blank"><i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/in/jie-cai-88006994/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://scholar.google.com/citations?user=IUR0LIQAAAAJ&hl=en" target="_blank"><i class="fas fa-graduation-cap"></i></a>
+                    <a href="https://caijie0620.github.io/" target="_blank"><i class="fab fa-github"></i></a>
                 </div>
             </div>
         </div>
