Update: Redesign personal website with modern UI

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
             <h2 class="section-title">Technical Skills</h2>
             <div class="skills-grid">
                 <div class="skill-card">
-                    <i class="fas fa-brain fa-3x"></i>
+                    <i class="fas fa-comments fa-3x"></i>
                     <h3>Multi-Modal Models</h3>
                     <p>Qwen2.5-VL</p>
                 </div>
