Update personal website: modify content and layout

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="container">
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
-                <p>I am a Senior Staff Research Scientist at OPPO US AI Center, specializing in AI, Computer Vision, and Vision-Language Models. My expertise spans across Image/Video Enhancement (including Super-Resolution, Reflection Removal, and Quality Enhancement) and Image/Video Understanding. I have a strong track record of building scalable and efficient AI models for real-world applications.</p>
+                <p>I am a Senior Staff Research Scientist at OPPO US AI Center, specializing in AI, Computer Vision, and Vision-Language Models. My expertise spans across Image/Video Enhancement (including Super-Resolution, Reflection Removal, and Quality Enhancement) and Image/Video Understanding. I have a strong track record of building cutting-edge and efficient AI models for real-world applications.</p>
             </div>
         </div>
     </section>
