feat: add profile photo

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 </head>
 <body>
     <header>
-        <img src="./images/profile.jpg" alt="Jie Cai" class="profile-img">
+        <img src="./images/CJ.jpg" alt="Jie Cai" class="profile-img">
         <h1>Jie Cai</h1>
         <p class="subtitle">Senior Staff Research Scientist | AI & Multi-Modal Expert</p>
     </header>
