--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="container">
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
-                <p>I am a Senior Staff Research Scientist at OPPO US AI Center, specializing in AI, Computer Vision, and Vision-Language Models. My expertise spans across Image/Video Enhancement (including Super-Resolution, Reflection Removal, and Quality Enhancement) and Image/Video Understanding. I have a strong track record of building cutting-edge and efficient AI models for real-world applications.</p>
+                <p>I am a Senior Staff Research Scientist at OPPO US AI Center, specializing in Computer Vision and Vision-Language Models. My expertise spans across Visual Enhancement (including Super-Resolution, Reflection Removal, and Deblurring) and Visual Understanding. I have a strong track record of building cutting-edge and efficient AI models for real-world applications.</p>
             </div>
         </div>
     </section>
@@ -218,8 +218,7 @@
             <div class="education-item">
                 <h3>Ph.D. in Computer Science and Engineering</h3>
                 <p>University of South Carolina</p>
-                <p>Aug. 2015 - Dec. 2019 | Columbia, SC, US</p>
-                <p>Advisor: Prof. Yan Tong</p>
+                <p>Aug. 2015 - Dec. 2019 | Columbia, SC, US | Advisor: Prof. Yan Tong</p>
             </div>
             <div class="education-item">
                 <h3>M.S. in Electrical and Computer Engineering</h3>
