--- a/index.html
+++ b/index.html
@@ -243,12 +243,13 @@
                 <ul>
                     <li>Led the development of AI Reflection Remover for Photo Album on OPPO Find X8</li>
                         [<a href="https://www.youtube.com/watch?v=4IUBm18YL68&ab_channel=OPPO" target="_blank">Video1</a>]
-                        [<a href="https://www.youtube.com/watch?v=wXfzNU8xGPA&ab_channel=OPPOIndia" target="_blank">Video2</a>]
-                        [<a href="https://www.youtube.com/watch?v=oYADtgdNJME&ab_channel=OPPO" target="_blank">Video3</a>]
+                        [<a href="https://www.youtube.com/watch?v=oYADtgdNJME&ab_channel=OPPO" target="_blank">Video2</a>]
+                        [<a href="https://www.youtube.com/watch?v=wXfzNU8xGPA&ab_channel=OPPOIndia" target="_blank">Video3</a>]
                     <li>Participated in the development of AI Clarity Enhancer for Photo Album on OPPO Find X8</li>
-                        [<a href="https://www.youtube.com/watch?v=4zatalh7QjA&ab_channel=OPPO" target="_blank">Video1</a>]
-                        [<a href="https://www.youtube.com/watch?v=gS7hZcn0Hf4&ab_channel=ColorOS" target="_blank">Video2</a>]
+                        [<a href="https://www.youtube.com/watch?v=gS7hZcn0Hf4&ab_channel=ColorOS" target="_blank">Video1</a>]
+                        [<a href="https://www.youtube.com/watch?v=4zatalh7QjA&ab_channel=OPPO" target="_blank">Video2</a>]
                         [<a href="https://www.youtube.com/watch?v=zTJ5SI1qftQ&ab_channel=OPPOCare" target="_blank">Video3</a>]
+                        [<a href="https://www.youtube.com/watch?v=ZZCEhIZJH6E&ab_channel=OPPOIndia" target="_blank">Video4</a>]
                     <li>Led the development of VSR models on OPPO Find X2-X8 flagship smartphones</li>
                         [<a href="https://www.youtube.com/watch?v=l0afNGZHln0&ab_channel=OPPOFAN" target="_blank">Video</a>]
                         [<a href="https://communityin.oppo.com/thread/1122801511807320065" target="_blank">O1 Ultra Vision Engine Feature</a>]
