--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
                         [<a href="https://www.youtube.com/watch?v=wXfzNU8xGPA&ab_channel=OPPOIndia" target="_blank">Video3</a>]
                     <li>Participated in the development of AI Clarity Enhancer for Photo Album on OPPO Find X8</li>
                         [<a href="https://www.youtube.com/watch?v=gS7hZcn0Hf4&ab_channel=ColorOS" target="_blank">Video1</a>]
+                        [<a href="https://www.youtube.com/watch?v=V9zS6YWr1uQ&ab_channel=OPPOEspa%C3%B1a" target="_blank">Video1</a>]
                         [<a href="https://www.youtube.com/watch?v=4zatalh7QjA&ab_channel=OPPO" target="_blank">Video2</a>]
                         [<a href="https://www.youtube.com/watch?v=zTJ5SI1qftQ&ab_channel=OPPOCare" target="_blank">Video3</a>]
                         [<a href="https://www.youtube.com/watch?v=ZZCEhIZJH6E&ab_channel=OPPOIndia" target="_blank">Video4</a>]
