Update subtitle to include '&' in job title

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <header>
         <img src="./images/CJ.jpg" alt="Jie Cai" class="profile-img">
         <h1>Jie Cai</h1>
-        <p class="subtitle">AI/ML Engineer</p>
+        <p class="subtitle">AI & ML Engineer</p>
     </header>
 
     <section id="about">
