Update professional summary and technical skills

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="container">
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
-                <p>I am a Senior Staff Research Scientist at OPPO US AI Center, specializing in Computer Vision and Vision-Language Models. My expertise spans across Visual Enhancement (including Super-Resolution, Reflection Removal, and Deblurring) and Visual Understanding. I have a strong track record of building cutting-edge and efficient AI models for real-world applications.</p>
+                <p>I am a Senior Staff Research Scientist at OPPO US AI Center, focusing on LLM-based agent systems. My work centers on tool use, agent skills, memory, and multi-step reasoning, with an emphasis on building and evaluating reliable agents that operate in complex, real-world environments.</p>
             </div>
         </div>
     </section>
@@ -262,7 +262,7 @@
                 <p class="date">May 2019 - Aug. 2019</p>
                 <ul>
                     <li>Implemented Mask R-CNN for medical image segmentation (CT & MRI)</li>
-                    <li>Achieved top ranking in CHAOS challenge for abdominal organ segmentation</li>
+                    <li>Achieved top-1 ranking in CHAOS challenge for abdominal organ segmentation</li>
                 </ul>
             </div>
             <div class="experience-item">
@@ -283,23 +283,23 @@
             <div class="skills-grid">
                 <div class="skill-card">
                     <i class="fas fa-comments fa-3x"></i>
-                    <h3>Multi-Modal Models</h3>
-                    <p>Qwen2.5-VL</p>
+                    <h3>AI Agent</h3>
+                    <p>Agent Skills, MCP, RAG, Memory</p>
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-brain fa-3x"></i>
                     <h3>AI Models</h3>
-                    <p>Diffusion Model, CodeFormer, RealESRGAN, NAFNet, LaMa, PaddleOCR, YOLO, YOSO</p>
-                </div>
-                <div class="skill-card">
-                    <i class="fas fa-camera fa-3x"></i>
-                    <h3>Computer Vision</h3>
-                    <p>Image Enhancement, Super-Resolution, Reflection Removal, Facial Expression Analysis</p>
+                    <p>Qwen3, Qwen3-VL, CLIP</p>
                 </div>
                 <div class="skill-card">
                     <i class="fas fa-code fa-3x"></i>
                     <h3>Development</h3>
-                    <p>Model Quantization, Model Deployment, Pipeline Implementation</p>
+                    <p>Agent Architecture Design, Tool Integration, Context & Memory Management, End-to-End System Orchestration</p>
+                </div>
+                <div class="skill-card">
+                    <i class="fas fa-camera fa-3x"></i>
+                    <h3>Computer Vision</h3>
+                    <p>Super-Resolution, Reflection Removal, Facial Expression Analysis</p>
                 </div>
             </div>
         </div>
